--- a/public/styles/rover.css
+++ b/public/styles/rover.css
@@ -132,7 +132,12 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   box-sizing: border-box; }
 
 .hide {
-  display: none; }
+  visibility: hidden;
+  opacity: 0; }
+
+.show {
+  visibility: visible;
+  opacity: 1; }
 
 html {
   font-family: 'Montserrat', sans-serif;
@@ -140,14 +145,13 @@ html {
   width: 100%;
   height: 100%;
   background: #000080; }
-
-body {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  padding: 1px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#c76e00), to(#000080));
-  background: linear-gradient(#c76e00, #000080); }
+  html body {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 1px;
+    background: -webkit-gradient(linear, left top, left bottom, from(#c76e00), to(#000080));
+    background: linear-gradient(#c76e00, #000080); }
 
 canvas {
   width: 100vw;
@@ -195,44 +199,6 @@ canvas {
   bottom: 57px;
   z-index: 3; }
 
-.main-title {
-  font-size: 50px;
-  font-size: 5rem;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  color: #3A3A3A;
-  text-shadow: 0 0 1.5rem 1;
-  color: #fcad26;
-  text-align: center; }
-
-h1 {
-  font-size: 30px;
-  font-size: 3rem;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  color: #3A3A3A;
-  text-shadow: 0 0 1.5rem 1;
-  color: #fcad26; }
-
-h2 {
-  font-size: 20px;
-  font-size: 2rem;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  color: #3A3A3A;
-  text-shadow: 0 0 1.5rem 1;
-  color: #c76e00;
-  text-align: center; }
-
-h3 {
-  font-size: 15px;
-  font-size: 1.5rem;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  color: #3A3A3A;
-  text-shadow: 0 0 1.5rem 1;
-  color: #c76e00; }
-
 .nasa-image {
   width: 100%;
   height: 100%;
@@ -244,13 +210,12 @@ h3 {
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+  position: fixed;
+  z-index: 5; }
 
 .nasa-image > img {
-  z-index: 99999;
-  position: fixed;
   margin: auto;
-  top: 100px;
   border: 12px solid #FFF;
   border-radius: 7px;
   width: 800px;
@@ -269,7 +234,8 @@ h3 {
   width: 40px;
   height: 40px;
   text-align: center;
-  border-radius: 30px; }
+  border-radius: 30px;
+  cursor: pointer; }
 
 .showup {
   color: red;
